# mxnet_cpp_infere

./: CMakeLists.txt  Readme.md
src/: main.cpp
